apps/cluster-payload/openldap/ingressroute-tcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: openldap-tcp
  namespace: openldap
spec:
  entryPoints:
    - ldap
  routes:
    - match: HostSNI(`*`)
      services:
        - name: openldap-ldap-stack-openldap
          port: 389
